@@ -47,6 +47,7 @@ namespace WebCore {
         static unsigned consumeEntity(SegmentedString&, bool& notEnoughCharacters);
 
     private:
+        inline void emitCommentToken();
         inline void emitCharacter(UChar);
         inline void emitParseError();
         inline void emitCurrentTagToken();
